# todo

./: .gitignore  README.md  notes.md  package.json  pyproject.toml  wrangler.jsonc
migrations/: 0001_init_users.sql  0002_sessions.sql  0003_todos.sql
public/: app.js  index.html  styles.css
src/: entry.py
src/auth/: cookies.py  pw.py  sessions.py
src/db/: todos.py  users.py
src/routes/: auth.py  todos.py
todo/: package-lock.json  pyproject.toml  wrangler.jsonc
