[project]
name = "bold-bread-533d"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "webtypy>=0.1.7",
]

[dependency-groups]
dev = [
    "workers-py"
]


[[d1_databases]]
binding = "DB"
database_name = "todo-db"
database_id = "0e0892f8-d69c-4605-b79e-acef70ebc478"
